# api/swagger.yaml
@@ -1,59 +1,63 @@
 ---
 swagger: "2.0"
 info:
-  version: "0.0.7"
+  version: "0.0.8"
   title: "Customer Portal API"
 basePath: "/v1"
 paths:
-  /company:
+  /companies:
     get:
       description: "検索条件に一致した会社情報を提供。検索条件は[ name | id ]"
-      operationId: "companyGET"
+      operationId: "companiesGET"
       parameters:
-      - name: "name"
+      - name: "companyName"
         in: "query"
         description: "会社名称"
         required: false
         type: "string"
-      - name: "id"
+      - name: "email"
         in: "query"
-        description: "顧客ID(customerId)"
+        description: "リクエスター（顧客または担当営業）のEmailアドレス"
         required: false
         type: "string"
+      - name: "rowNumber"
+        in: "query"
+        description: "機器一覧を取得する際の開始位置（最初から取得する場合は0を設定）"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "currentPage"
+        in: "query"
+        description: "機器一覧の現在の表示ページ番号"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "pageLimit"
+        in: "query"
+        description: "１ページの最大表示行数"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "searchLimit"
+        in: "query"
+        description: "最大該当数（最大取得数：デフォルト値は20最大値は500）"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/Company"
+            $ref: "#/definitions/Companies"
         400:
           description: "Invalid query"
         404:
           description: "Company not found"
       x-swagger-router-controller: "Default"
-  /company/list/{email}:
-    get:
-      description: "担当する顧客会社名リストを提供"
-      operationId: "companyListEmailGET"
-      parameters:
-      - name: "email"
-        in: "path"
-        description: "リクエスター（NetOne担当者）のEmailアドレス"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/CompanyList"
-        400:
-          description: "Invalid email supplied"
-        404:
-          description: "Company not found"
-      x-swagger-router-controller: "Default"
-  /company/{companyId}:
+  /companies/{companyId}:
     get:
       description: "会社IDに従った会社情報を提供"
-      operationId: "companyCompanyIdGET"
+      operationId: "companiesCompanyIdGET"
       parameters:
       - name: "companyId"
         in: "path"
@@ -71,11 +75,16 @@ paths:
         404:
           description: "Company not found"
       x-swagger-router-controller: "Default"
-  /contract/list:
+  /contracts:
     get:
       description: "保守契約リスト情報を提供"
-      operationId: "contractListGET"
+      operationId: "contractsGET"
       parameters:
+      - name: "companyId"
+        in: "query"
+        description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
+        required: false
+        type: "string"
       - name: "serial"
         in: "query"
         description: "シリアル番号"
@@ -101,40 +110,44 @@ paths:
         description: "契約終了日"
         required: false
         type: "string"
+      - name: "rowNumber"
+        in: "query"
+        description: "機器一覧を取得する際の開始位置（最初から取得する場合は0を設定）"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "currentPage"
+        in: "query"
+        description: "機器一覧の現在の表示ページ番号"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "pageLimit"
+        in: "query"
+        description: "１ページの最大表示行数"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "searchLimit"
+        in: "query"
+        description: "最大該当数（最大取得数：デフォルト値は20最大値は500）"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/ContractList"
+            $ref: "#/definitions/Contracts"
         400:
           description: "Invalied query supplied"
         404:
           description: "ContractList not found"
       x-swagger-router-controller: "Default"
-  /contract/list/{companyId}:
-    get:
-      description: "保守契約リスト情報を提供"
-      operationId: "contractListCompanyIdGET"
-      parameters:
-      - name: "companyId"
-        in: "path"
-        description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/ContractList"
-        400:
-          description: "Invalied ID supplied"
-        404:
-          description: "ContractList not found"
-      x-swagger-router-controller: "Default"
-  /contract/{contractId}:
+  /contracts/{contractId}:
     get:
       description: "保守契約情報を提供"
-      operationId: "contractContractIdGET"
+      operationId: "contractsContractIdGET"
       parameters:
       - name: "contractId"
         in: "path"
@@ -151,31 +164,55 @@ paths:
         404:
           description: "Contract not found"
       x-swagger-router-controller: "Default"
-  /customer:
+  /customers:
     get:
       description: "顧客情報を提供"
-      operationId: "customerGET"
+      operationId: "customersGET"
       parameters:
       - name: "email"
         in: "query"
         description: "顧客のEmailアドレスを検索キーとして設定"
-        required: true
+        required: false
         type: "string"
         format: "string"
+      - name: "rowNumber"
+        in: "query"
+        description: "機器一覧を取得する際の開始位置（最初から取得する場合は0を設定）"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "currentPage"
+        in: "query"
+        description: "機器一覧の現在の表示ページ番号"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "pageLimit"
+        in: "query"
+        description: "１ページの最大表示行数"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "searchLimit"
+        in: "query"
+        description: "最大該当数（最大取得数：デフォルト値は20最大値は500）"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/Customer"
+            $ref: "#/definitions/Customers"
         400:
           description: "Invalid query supplied"
         404:
           description: "Customer not found"
       x-swagger-router-controller: "Default"
-  /customer/{customerId}:
+  /customers/{customerId}:
     get:
       description: "顧客IDに従った顧客情報を提供"
-      operationId: "customerCustomerIdGET"
+      operationId: "customersCustomerIdGET"
       parameters:
       - name: "customerId"
         in: "path"
@@ -193,39 +230,24 @@ paths:
         404:
           description: "Customer not found"
       x-swagger-router-controller: "Default"
-  /product:
+  /products:
     get:
-      description: "製品詳細情報を提供"
-      operationId: "productGET"
+      description: "保守契約済み製品リスト情報を提供"
+      operationId: "productsGET"
       parameters:
+      - name: "companyId"
+        in: "query"
+        description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
+        required: false
+        type: "string"
+      - name: "email"
+        in: "query"
+        description: "リクエスターのEmailアドレス"
+        required: false
+        type: "string"
       - name: "customerId"
         in: "query"
         description: "顧客ID"
-        required: false
-        type: "string"
-      - name: "email"
-        in: "query"
-        description: "リクエスターのEmailアドレス"
-        required: false
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/Product"
-        400:
-          description: "Invalied query supplied"
-        404:
-          description: "Product not found"
-      x-swagger-router-controller: "Default"
-  /product/list:
-    get:
-      description: "保守契約済み製品リスト情報を提供"
-      operationId: "productListGET"
-      parameters:
-      - name: "email"
-        in: "query"
-        description: "リクエスターのEmailアドレス"
         required: false
         type: "string"
       - name: "serial"
@@ -253,50 +275,44 @@ paths:
         description: "製品テキスト"
         required: false
         type: "string"
-      - name: "index"
+      - name: "rowNumber"
         in: "query"
         description: "機器一覧を取得する際の開始位置（最初から取得する場合は0を設定）"
         required: false
         type: "integer"
-      - name: "max"
+        format: "int64"
+      - name: "currentPage"
         in: "query"
-        description: "最大該当数（最大取得数：デフォルト値は50最大値は500）"
+        description: "機器一覧の現在の表示ページ番号"
         required: false
         type: "integer"
+        format: "int64"
+      - name: "pageLimit"
+        in: "query"
+        description: "１ページの最大表示行数"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "searchLimit"
+        in: "query"
+        description: "最大該当数（最大取得数：デフォルト値は20最大値は500）"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/ProductList"
+            $ref: "#/definitions/Products"
         400:
           description: "Invalied query supplied"
         404:
           description: "ProductList not found"
       x-swagger-router-controller: "Default"
-  /product/list/{companyId}:
-    get:
-      description: "保守契約済み製品リスト情報を提供"
-      operationId: "productListCompanyIdGET"
-      parameters:
-      - name: "companyId"
-        in: "path"
-        description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/ProductList"
-        400:
-          description: "Invalied ID supplied"
-        404:
-          description: "ProductList not found"
-      x-swagger-router-controller: "Default"
-  /product/{productId}:
+  /products/{productId}:
     get:
       description: "製品IDに従った商品詳細情報を提供"
-      operationId: "productProductIdGET"
+      operationId: "productsProductIdGET"
       parameters:
       - name: "productId"
         in: "path"
@@ -314,41 +330,65 @@ paths:
         404:
           description: "Product not found"
       x-swagger-router-controller: "Default"
-  /sales:
+  /saleses:
     get:
       description: "担当営業情報を提供する"
-      operationId: "salesGET"
+      operationId: "salesesGET"
       parameters:
       - name: "email"
         in: "query"
         description: "顧客のEmailアドレス（アカウントID）"
         required: false
         type: "string"
+      - name: "rowNumber"
+        in: "query"
+        description: "機器一覧を取得する際の開始位置（最初から取得する場合は0を設定）"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "currentPage"
+        in: "query"
+        description: "機器一覧の現在の表示ページ番号"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "pageLimit"
+        in: "query"
+        description: "１ページの最大表示行数"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "searchLimit"
+        in: "query"
+        description: "最大該当数（最大取得数：デフォルト値は20最大値は500）"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/inline_response_200"
+            $ref: "#/definitions/Saleses"
         400:
           description: "Invalied email supplied"
         404:
           description: "Sales not found"
       x-swagger-router-controller: "Default"
-  /sales/{companyId}:
+  /saleses/{userId}:
     get:
       description: "担当営業情報を提供する"
-      operationId: "salesCompanyIdGET"
+      operationId: "salesesUserIdGET"
       parameters:
-      - name: "companyId"
+      - name: "userId"
         in: "path"
-        description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
+        description: "社員番号"
         required: true
         type: "string"
       responses:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/inline_response_200_1"
+            $ref: "#/definitions/Sales"
         400:
           description: "Invalied ID supplied"
         404:
@@ -362,7 +402,7 @@ definitions:
     - "email"
     - "firstname"
     properties:
-      id:
+      customerId:
         type: "string"
         format: "string"
         description: "顧客ID"
@@ -398,17 +438,38 @@ definitions:
         type: "boolean"
         description: "この顧客データが有効であれば正を設定（デフォルトは正）"
         default: true
+    description: "顧客情報"
+  Customers:
+    type: "object"
+    properties:
+      totalEntries:
+        type: "integer"
+        format: "int64"
+      rowNumber:
+        type: "integer"
+        format: "int64"
+      currentPage:
+        type: "integer"
+        format: "int64"
+      pageLimit:
+        type: "integer"
+        format: "int64"
+      Customers:
+        type: "array"
+        items:
+          $ref: "#/definitions/Customer"
+    description: "顧客情報リスト"
   Company:
     type: "object"
     required:
-    - "id"
-    - "name"
+    - "companyId"
+    - "companyName"
     properties:
-      id:
+      companyId:
         type: "string"
         format: "string"
         description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
-      name:
+      companyName:
         type: "string"
         format: "string"
         description: "会社名称"
@@ -428,7 +489,7 @@ definitions:
         type: "string"
         format: "string"
         description: "住所２"
-      addresss3:
+      address3:
         type: "string"
         format: "string"
         description: "住所３"
@@ -444,21 +505,33 @@ definitions:
         type: "boolean"
         description: "このデータが現在有効であれば正を設定"
         default: true
-  CompanyList:
+    description: "会社情報"
+  Companies:
     type: "object"
     required:
     - "email"
-    - "total"
+    - "rowNumber"
+    - "totalEntries"
     properties:
       email:
         type: "string"
-      total:
+      totalEntries:
         type: "integer"
-        format: "int32"
+        format: "int64"
+      rowNumber:
+        type: "integer"
+        format: "int64"
+      currentPage:
+        type: "integer"
+        format: "int64"
+      pageLimit:
+        type: "integer"
+        format: "int64"
       Companies:
         type: "array"
         items:
           $ref: "#/definitions/Company"
+    description: "会社情報リスト"
   Sales:
     type: "object"
     required:
@@ -477,6 +550,27 @@ definitions:
       lastname:
         type: "string"
         description: "担当営業の名前"
+    description: "担当営業情報"
+  Saleses:
+    type: "object"
+    properties:
+      totalEntries:
+        type: "integer"
+        format: "int64"
+      rowNumber:
+        type: "integer"
+        format: "int64"
+      currentPage:
+        type: "integer"
+        format: "int64"
+      pageLimit:
+        type: "integer"
+        format: "int64"
+      Saleses:
+        type: "array"
+        items:
+          $ref: "#/definitions/Sales"
+    description: "担当営業リスト"
   Contract:
     type: "object"
     required:
@@ -522,7 +616,7 @@ definitions:
       chargeOfEnginner:
         type: "string"
         description: "担当技術"
-      customerContractno:
+      customerContractNo:
         type: "string"
         description: "顧客契約番号"
       status:
@@ -559,31 +653,35 @@ definitions:
         type: "string"
         description: "エンドユーザー"
     description: "保守契約情報"
-  ContractList:
+  Contracts:
     type: "object"
     required:
-    - "id"
-    - "numOf"
-    - "total"
+    - "companyId"
+    - "rowNumber"
+    - "totalEntries"
     properties:
-      id:
+      companyId:
         type: "string"
         description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先ID、納入先コード等で使用しているIDを想定）Inputさ\
           れたidと同じ値となる"
-      total:
+      totalEntries:
         type: "integer"
         description: "検索条件に一致した件数"
-      index:
+      rowNumber:
         type: "integer"
         description: "データの開始位置"
-      numOf:
+      currentPage:
         type: "integer"
         format: "int64"
         description: "データの提供数"
+      pageLimit:
+        type: "integer"
+        format: "int64"
       Contracts:
         type: "array"
         items:
           $ref: "#/definitions/Contract"
+    description: "保守契約リスト"
   Product:
     type: "object"
     required:
@@ -662,47 +760,24 @@ definitions:
       address:
         type: "string"
         description: "住所"
-    description: "製品詳細情報"
-  ProductList:
+    description: "製品情報"
+  Products:
     type: "object"
     properties:
-      total:
+      totalEntries:
         type: "integer"
         format: "int64"
-      index:
+      rowNumber:
         type: "integer"
         format: "int64"
-      numOf:
+      currentPage:
+        type: "integer"
+        format: "int64"
+      pageLimit:
         type: "integer"
         format: "int64"
       Products:
         type: "array"
         items:
           $ref: "#/definitions/Product"
-  inline_response_200:
-    required:
-    - "id"
-    - "total"
-    properties:
-      total:
-        type: "integer"
-        format: "int64"
-        description: "全担当営業数（検索条件に一致した件数）"
-      Sales:
-        $ref: "#/definitions/Sales"
-      id:
-        type: "string"
-        description: "会社ID"
-  inline_response_200_1:
-    required:
-    - "id"
-    - "total"
-    properties:
-      total:
-        type: "integer"
-        description: "全担当営業数（検索条件に一致した件数）"
-      Sales:
-        $ref: "#/definitions/Sales"
-      id:
-        type: "string"
-        description: "会社ID"
+    description: "商品情報リスト"
